objects/SBQQ__QuoteLine__c/fields/ESR_Service_Type__c.field-meta.xml
<CustomField>
    <fullName>ESR_Service_Type__c</fullName>
    <label>ESR Service Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Asset Baseline Management Services</fullName>
            </value>
            <value>
                <fullName>Cloud Migration Services</fullName>
            </value>
            <value>
                <fullName>Core Implementation Support</fullName>
            </value>
            <value>
                <fullName>Core Plus Implementation Support</fullName>
            </value>
            <value>
                <fullName>Deployment Services</fullName>
            </value>
            <value>
                <fullName>Endpoint Management Implementation Support</fullName>
            </value>
            <value>
                <fullName>Endpoint Management Plus Implementation Support</fullName>
            </value>
            <value>
                <fullName>Endpoint Visibility and Discovery Services</fullName>
            </value>
            <value>
                <fullName>Managed Patching Services</fullName>
            </value>
            <value>
                <fullName>Microsoft Integration Support</fullName>
            </value>
            <value>
                <fullName>Migration Services</fullName>
            </value>
            <value>
                <fullName>Risk &amp; Compliance Implementation Support</fullName>
            </value>
            <value>
                <fullName>Risk &amp; Compliance Plus Implementation Support</fullName>
            </value>
            <value>
                <fullName>Risk Assessment (TRA) Services</fullName>
            </value>
            <value>
                <fullName>SBOM Services</fullName>
            </value>
            <value>
                <fullName>Security Operations Implementation Support</fullName>
            </value>
            <value>
                <fullName>ServiceNow Integration Support</fullName>
            </value>
            <value>
                <fullName>Tanium Cloud Migration Support</fullName>
            </value>
            <value>
                <fullName>Tanium Custom Content Support</fullName>
            </value>
            <value>
                <fullName>Tanium Health Check</fullName>
            </value>
            <value>
                <fullName>Tanium OT Implementation Support</fullName>
            </value>
            <value>
                <fullName>Tanium Solution Implementation Support</fullName>
            </value>
            <value>
                <fullName>Tanium Upgrade Support</fullName>
            </value>
            <value>
                <fullName>Threat Splunk Integration Services</fullName>
            </value>
            <value>
                <fullName>Windows 10 Migration Support</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>