objects/SBQQ__QuoteLine__c/fields/Exclude_ARR_Formula__c.field-meta.xml
<CustomField>
    <fullName>Exclude_ARR_Formula__c</fullName>
    <description>Used in Summary Variable.

04.04.2025 - Changed SBQQ__EffectiveQuantity__c  = 0 to SBQQ__EffectiveQuantity__c  &lt;&gt; 0</description>
    <formula>AND( NOT( Exclude_from_ARR__c), SBQQ__EffectiveQuantity__c  &lt;&gt; 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Exclude ARR Formula</label>
    <type>Checkbox</type>
</CustomField>