objects/SBQQ__QuoteLine__c/fields/Exclude_from_Addl_Disc_Calc__c.field-meta.xml
<CustomField>
    <fullName>Exclude_from_Addl_Disc_Calc__c</fullName>
    <defaultValue>false</defaultValue>
    <description>TwinField from Product: Exclude Product from Additional Discount Calculation</description>
    <inlineHelpText>Exclude Product from Additional Discount Calculation</inlineHelpText>
    <label>Exclude from Addl Disc Calc</label>
    <type>Checkbox</type>
</CustomField>