objects/SBQQ__QuoteLine__c/fields/Exclude_from_ARR__c.field-meta.xml
<CustomField>
    <fullName>Exclude_from_ARR__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When this box is checked, the product will be excluded from ARR calculations and roll ups.</description>
    <inlineHelpText>When this box is checked, the product will be excluded from ARR calculations and roll ups.</inlineHelpText>
    <label>Exclude from ARR</label>
    <type>Checkbox</type>
</CustomField>