objects/SBQQ__QuoteLine__c/fields/Exclude_from_Seats_Roll_up__c.field-meta.xml
<CustomField>
    <fullName>Exclude_from_Seats_Roll_up__c</fullName>
    <defaultValue>false</defaultValue>
    <description>TwinField: Copy field value to Subscription.  Value is set via Price Rule.</description>
    <label>Exclude from Seats Roll-up</label>
    <type>Checkbox</type>
</CustomField>