objects/SBQQ__QuoteLine__c/fields/Exclude_Uplift__c.field-meta.xml
<CustomField>
    <fullName>Exclude_Uplift__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exclude Uplift</label>
    <type>Checkbox</type>
</CustomField>