objects/SBQQ__QuoteLine__c/fields/Exit_Arr_Only__c.field-meta.xml
<CustomField>
    <fullName>Exit_Arr_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exit Arr Only</label>
    <type>Checkbox</type>
</CustomField>