objects/SBQQ__QuoteLine__c/fields/f_L1_L2_Support_Discount__c.field-meta.xml
<CustomField>
    <fullName>f_L1_L2_Support_Discount__c</fullName>
    <formula>L1_L2_Support_Discount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>L1/L2 Support Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>