objects/SBQQ__QuoteLine__c/fields/f_Partner_Discount__c.field-meta.xml
<CustomField>
    <fullName>f_Partner_Discount__c</fullName>
    <formula>SBQQ__PartnerDiscount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Partner Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>