objects/SBQQ__QuoteLine__c/fields/Hardware_List_Total__c.field-meta.xml
<CustomField>
    <fullName>Hardware_List_Total__c</fullName>
    <description>List Total from all quote lines where product grouping is Hardware.</description>
    <label>Hardware List Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>