objects/SBQQ__QuoteLine__c/fields/Include_In_Annualized_Software_Spend__c.field-meta.xml
<CustomField>
    <fullName>Include_In_Annualized_Software_Spend__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Include In Annualized Software Spend</label>
    <type>Checkbox</type>
</CustomField>