objects/SBQQ__QuoteLine__c/fields/Include_in_Day_1_ARR__c.field-meta.xml
<CustomField>
    <fullName>Include_in_Day_1_ARR__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Include in Day 1 ARR</label>
    <type>Checkbox</type>
</CustomField>