objects/SBQQ__QuoteLine__c/fields/Include_in_Day_1_ARR_formula__c.field-meta.xml
<CustomField>
    <fullName>Include_in_Day_1_ARR_formula__c</fullName>
    <formula>IF(
   AND(
      ISBLANK(SBQQ__RenewedSubscription__c), SBQQ__EffectiveStartDate__c = Day_1_ARR_Start_Date__c
   ), TRUE, 
   IF(
      AND(
         SBQQ__StartDate__c &lt;= Day_1_ARR_Start_Date__c,
         End_Date__c &gt;=Day_1_ARR_Start_Date__c
      ),TRUE, FALSE
   )
)</formula>
    <inlineHelpText>When this value is TRUE, the Day 1 ARR amount for the quote line will be included in the Day 1 ARR at the quote header</inlineHelpText>
    <label>Include in Day 1 ARR (formula)</label>
    <type>Checkbox</type>
</CustomField>