objects/SBQQ__QuoteLine__c/fields/Include_in_Exit_ARR__c.field-meta.xml
<CustomField>
    <fullName>Include_in_Exit_ARR__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used in CPQ Price Rule.</description>
    <label>Include in Exit ARR</label>
    <type>Checkbox</type>
</CustomField>