objects/SBQQ__QuoteLine__c/fields/Include_in_Exit_ARR_Formula__c.field-meta.xml
<CustomField>
    <fullName>Include_in_Exit_ARR_Formula__c</fullName>
    <formula>AND(
 NOT(Exclude_from_ARR__c),
 End_Date__c = SBQQ__Quote__r.Max_End_Date__c
)</formula>
    <inlineHelpText>When this box is checked, the ARR Amount on this quote line will be included in Exit ARR calculation</inlineHelpText>
    <label>Include in Exit ARR (Formula)</label>
    <type>Checkbox</type>
</CustomField>