objects/SBQQ__QuoteLine__c/fields/Include_in_Routing__c.field-meta.xml
<CustomField>
    <fullName>Include_in_Routing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Include in the Quote approval process.</description>
    <label>Include in Routing</label>
    <type>Checkbox</type>
</CustomField>