objects/SBQQ__QuoteLine__c/fields/Include_in_Software_List_Total__c.field-meta.xml
<CustomField>
    <fullName>Include_in_Software_List_Total__c</fullName>
    <formula>IF( 
 AND( NOT( Exclude_from_Addl_Disc_Calc__c ), ISPICKVAL(Product_Group__c, &quot;Software&quot;)), True, False
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Include in Software List Total</label>
    <type>Checkbox</type>
</CustomField>