objects/SBQQ__QuoteLine__c/fields/Included_Products__c.field-meta.xml
<CustomField>
    <fullName>Included_Products__c</fullName>
    <description>Used in CPQ Stardard Drawer</description>
    <formula>SBQQ__Product__r.Bundle_Component__c</formula>
    <label>Included Products</label>
    <type>Text</type>
</CustomField>