objects/SBQQ__QuoteLine__c/fields/IncludeInSeatsPurchased__c.field-meta.xml
<CustomField>
    <fullName>IncludeInSeatsPurchased__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SS-1266</description>
    <label>Include in Seats Purchased</label>
    <type>Checkbox</type>
</CustomField>