objects/SBQQ__QuoteLine__c/fields/Incoming_ARR__c.field-meta.xml
<CustomField>
    <fullName>Incoming_ARR__c</fullName>
    <defaultValue>0</defaultValue>
    <description>This field should no longer be needed. Incoming ARR comes from the contracts related to an opportunity through the contract Renewal Opportunity field</description>
    <label>DEPRECATED - Incoming ARR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>