objects/SBQQ__QuoteLine__c/fields/Is_Cloned_Quote_Line__c.field-meta.xml
<CustomField>
    <fullName>Is_Cloned_Quote_Line__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to identify when a Quote Line is cloned from another Quote Line (Is not populated by cloning header Quote). SS-10607</description>
    <label>Is Cloned Quote Line</label>
    <type>Checkbox</type>
</CustomField>