objects/SBQQ__QuoteLine__c/fields/Is_ESR_Product__c.field-meta.xml
<CustomField>
    <fullName>Is_ESR_Product__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This field is used in the ESR Product count</inlineHelpText>
    <label>Is ESR Product</label>
    <type>Checkbox</type>
</CustomField>