objects/SBQQ__QuoteLine__c/fields/IsComponentProduct__c.field-meta.xml
<CustomField>
    <fullName>IsComponentProduct__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Twinfield from Product Option.  Used in Price Rule.</description>
    <label>IsComponentProduct</label>
    <type>Checkbox</type>
</CustomField>