objects/SBQQ__QuoteLine__c/fields/L1_L2_Support_Discount__c.field-meta.xml
<CustomField>
    <fullName>L1_L2_Support_Discount__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Used in Price Rule as part of Stacked Partner Discount.</description>
    <inlineHelpText>Discount if Support Provider will be providing L1/L2 Support.</inlineHelpText>
    <label>L1/L2 Support Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>