objects/SBQQ__QuoteLine__c/fields/Line_Item_Term__c.field-meta.xml
<CustomField>
    <fullName>Line_Item_Term__c</fullName>
    <label>Line Item Term</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>