objects/SBQQ__QuoteLine__c/fields/ListPriceTemplate__c.field-meta.xml
<CustomField>
    <fullName>ListPriceTemplate__c</fullName>
    <formula>SBQQ__ProratedListPrice__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>List Price Template</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>