objects/SBQQ__QuoteLine__c/fields/Marketplace_ARR_Impact_Percent__c.field-meta.xml
<CustomField>
    <fullName>Marketplace_ARR_Impact_Percent__c</fullName>
    <formula>SBQQ__Quote__r.Marketplace_ARR_Impact_Percent__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The percentage by which ARR Amount will be decreased because this is a Marketplace order</inlineHelpText>
    <label>Marketplace ARR Impact (Percent)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>