objects/SBQQ__QuoteLine__c/fields/Max_Bundle_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Max_Bundle_Quantity__c</fullName>
    <description>Used in Summary Variable/Price Rule to aggregate Max Quantity.</description>
    <formula>SBQQ__Quote__r.Max_Bundle_Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Max Bundle Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>