objects/SBQQ__QuoteLine__c/fields/Media_Type__c.field-meta.xml
<CustomField>
    <fullName>Media_Type__c</fullName>
    <description>Also called &quot;NIC Type&quot;</description>
    <inlineHelpText>Also called &quot;NIC Type&quot;</inlineHelpText>
    <label>Media Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Copper</fullName>
            </value>
            <value>
                <fullName>Fiber</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>