objects/SBQQ__QuoteLine__c/fields/Mid_Term_Conversion_Product__c.field-meta.xml
<CustomField>
    <fullName>Mid_Term_Conversion_Product__c</fullName>
    <label>Mid-Term Conversion Product</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Mid_Term_Conversion_Product</valueSetName>
    </valueSet>
</CustomField>