objects/SBQQ__QuoteLine__c/fields/MSP_Partner_Discount__c.field-meta.xml
<CustomField>
    <fullName>MSP_Partner_Discount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Look up to MSP Object to get Tier Discount.</description>
    <label>MSP Partner Discount</label>
    <referenceTo>MSP_Partner_Discount__c</referenceTo>
    <relationshipLabel>Quote Lines</relationshipLabel>
    <relationshipName>Quote_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>