objects/SBQQ__QuoteLine__c/fields/NARR__c.field-meta.xml
<CustomField>
    <fullName>NARR__c</fullName>
    <defaultValue>0</defaultValue>
    <label>NARR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>