objects/SBQQ__QuoteLine__c/fields/Net_Total_after_Fees__c.field-meta.xml
<CustomField>
    <fullName>Net_Total_after_Fees__c</fullName>
    <description>Implemented as a part of the FY25 Partner Redesign project. Jira ticket SS-8187</description>
    <formula>SBQQ__NetTotal__c - Partner_Rebate_Dollars__c - Partner_Referral_Fee_Dollars__c - Partner_Marketplace_Fee_Dollars__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is the Net Amount of the line item after removing the Partner Rebate, Partner Referral and Partner Marketplace Fees</inlineHelpText>
    <label>Net Total after Fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>