objects/SBQQ__QuoteLine__c/fields/Net_Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>Net_Unit_Price__c</fullName>
    <formula>IF(
    AND(
        SBQQ__Quote__r.SBQQ__PriceBook__r.Name = &apos;Global Pricebook&apos;,
        SBQQ__Bundle__c,
        ISPICKVAL(Product_Group__c, &apos;Software&apos;)
    ),
    IF(
        OR(
            SBQQ__ProductCode__c = &apos;TAN-SECOPSHUNTIQ-CLOUD&apos;,
            SBQQ__ProductCode__c = &apos;TAN-SECOPSHUNTIQ-S&apos;
        ),
        SBQQ__ComponentTotal__c / SBQQ__EffectiveQuantity__c,
        SBQQ__PackageTotal__c / SBQQ__EffectiveQuantity__c
    ),
    SBQQ__NetPrice__c
)



/* Prior version 9.22.25

IF( AND( SBQQ__Bundle__c, TEXT( Product_Group__c ) == &apos;Software&apos;),( SBQQ__PackageTotal__c / SBQQ__EffectiveQuantity__c ), SBQQ__NetPrice__c )
 
 */</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net Unit-Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>