objects/SBQQ__QuoteLine__c/fields/NetSuite_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>NetSuite_Start_Date__c</fullName>
    <inlineHelpText>This is the date when licenses were provisioned in NetSuite</inlineHelpText>
    <label>NetSuite Start Date</label>
    <type>Date</type>
</CustomField>