objects/SBQQ__QuoteLine__c/fields/Non_Discountable_Custom__c.field-meta.xml
<CustomField>
    <fullName>Non_Discountable_Custom__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Twins from Product2 Object - used for DD Validation on Additional Disc.</description>
    <label>Non-Discountable Custom</label>
    <type>Checkbox</type>
</CustomField>