objects/SBQQ__QuoteLine__c/fields/NS_Pricebook_Level__c.field-meta.xml
<CustomField>
    <fullName>NS_Pricebook_Level__c</fullName>
    <description>Used in Price Rule to set Pricebook level based on Pricebook.</description>
    <label>NS Pricebook Level</label>
    <length>80</length>
    <type>Text</type>
</CustomField>