objects/SBQQ__QuoteLine__c/fields/Opportunity_Registration_Discount__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Registration_Discount__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Used in Price Rule as part of Stacked Partner Discount.</description>
    <inlineHelpText>Discount if Opportunity has approved Opportunity Registration attached.</inlineHelpText>
    <label>DEPRECATED - Opp Reg Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>