objects/SBQQ__QuoteLine__c/fields/OpportunityId__c.field-meta.xml
<CustomField>
    <fullName>OpportunityId__c</fullName>
    <description>To avoid SOQL limit issues</description>
    <formula>CASESAFEID(SBQQ__Quote__r.SBQQ__Opportunity2__c)</formula>
    <label>OpportunityId</label>
    <type>Text</type>
</CustomField>