objects/SBQQ__QuoteLine__c/fields/Override_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Override_Start_Date__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Checking this field will bypass CPQ automation that assigns the earliest start date on non-subscription products.</inlineHelpText>
    <label>Override Start Date</label>
    <type>Checkbox</type>
</CustomField>