objects/SBQQ__QuoteLine__c/fields/Partner_Disc_Change__c.field-meta.xml
<CustomField>
    <fullName>Partner_Disc_Change__c</fullName>
    <description>Comparison between Partner Discount from original (subscription) deal and Renewal.</description>
    <formula>IF(
 OR(
  ISPICKVAL(SBQQ__OptionType__c, &quot;Component&quot;),
  SBQQ__Quote__r.Account_Segment__c = &quot;Public Sector&quot;,
  ISPICKVAL(SBQQ__OptionType__c, &quot;Accessory&quot;),
  ISBLANK( SBQQ__RenewedSubscription__c )),0,
 (SBQQ__RenewedSubscription__r.SBQQ__PartnerDiscount__c - SBQQ__PartnerDiscount__c ) 
   )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Partner Disc Change</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>