objects/SBQQ__QuoteLine__c/fields/Partner_Discount_Difference__c.field-meta.xml
<CustomField>
    <fullName>Partner_Discount_Difference__c</fullName>
    <defaultValue>(0)</defaultValue>
    <description>Implemented as a part of the FY25 Partner Redesign project. Jira ticket SS-8040</description>
    <inlineHelpText>This field indicates the difference between the standard Partner Discount field and the programmatically applied Tanium Partner Discount percentage</inlineHelpText>
    <label>Partner Discount Difference</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>