objects/SBQQ__QuoteLine__c/fields/Partner_Discount_Overridden__c.field-meta.xml
<CustomField>
    <fullName>Partner_Discount_Overridden__c</fullName>
    <description>Implemented as a part of the FY25 Partner Redesign project. Jira ticket SS-8040</description>
    <inlineHelpText>This field will indicate if the programmatically applied Partner Discount has been overridden. If the discount percentage has been increased or decreased, approval of the quote will be required</inlineHelpText>
    <label>Partner Discount Overridden</label>
    <length>40</length>
    <type>Text</type>
</CustomField>