objects/SBQQ__QuoteLine__c/fields/Partner_Discretionary_Discount__c.field-meta.xml
<CustomField>
    <fullName>Partner_Discretionary_Discount__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Used in Price Rule as part of Stacked Partner Discount.</description>
    <inlineHelpText>Enter any adjustments to programmatic Partner Discounts.</inlineHelpText>
    <label>Partner Discretionary Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>