objects/SBQQ__QuoteLine__c/fields/Partner_Rebate_Dollars__c.field-meta.xml
<CustomField>
    <fullName>Partner_Rebate_Dollars__c</fullName>
    <description>Implemented as a part of the FY25 Partner Redesign project. Jira ticket SS-7691

        Effective April 30, 2025, the Partner Rebate program has ended. Partner Rebates will not be calculated on any quotes going forward.</description>
    <formula>IF(Exclude_from_Rebate__c, 0, SBQQ__Quote__r.Partner_Rebate_Dollars__c * Partner_Rebate_Percent__c)

/*
IF(Exclude_from_Rebate__c, 0, SBQQ__Quote__r.Sum_of_Rebate_Eligible_Quote_Lines__c * Partner_Rebate_Percent__c)
*/</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Identifies the amount of Rebate eligible TCV that the partner will receive in rebate fees. Effective April 30, 2025, the Partner Rebate program has ended. Partner Rebates will not be calculated on any quotes going forward.</inlineHelpText>
    <label>DEPRECATED - Partner Rebate ($)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>