objects/SBQQ__QuoteLine__c/fields/Partner_Rebate_Dollars_Day_1__c.field-meta.xml
<CustomField>
    <fullName>Partner_Rebate_Dollars_Day_1__c</fullName>
    <defaultValue>(0)</defaultValue>
    <label>DEPRECATED - Partner Rebate ($) - Day 1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>