objects/SBQQ__QuoteLine__c/fields/Partner_Referral_Fee_Percent__c.field-meta.xml
<CustomField>
    <fullName>Partner_Referral_Fee_Percent__c</fullName>
    <description>Implemented as a part of the FY25 Partner Redesign project. Jira ticket SS-8187</description>
    <formula>IF(Exclude_from_ARR__c, 0, SBQQ__Quote__r.Partner_Referral_Fee_Percent__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is the amount that the partner will be paid in referral fees on this deal</inlineHelpText>
    <label>Partner Referral Fee (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>