objects/SBQQ__QuoteLine__c/fields/Per_Unit_Cost_To_Verizon__c.field-meta.xml
<CustomField>
    <fullName>Per_Unit_Cost_To_Verizon__c</fullName>
    <description>Used In Verizon Quote and template</description>
    <formula>SBQQ__EffectiveQuantity__c / Term_Computed__c

/*[backup 4.29.2024]Sub_Total_Doc_Rev__c / SBQQ__EffectiveQuantity__c / Term_Computed__c*/

/*
[Backup 08.25.23]Sub_Total_Doc_Rev__c / SBQQ__Quantity__c / Term_Cmputed__c
*/</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Per Unit Cost To Verizon</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>