objects/SBQQ__QuoteLine__c/fields/Percent_of_Total_Software__c.field-meta.xml
<CustomField>
    <fullName>Percent_of_Total_Software__c</fullName>
    <description>Used in Price Rule - QL - Target Software Net Amount. SS-8233</description>
    <label>Percent of Total Software</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>