objects/SBQQ__QuoteLine__c/fields/Percent_to_Decimal__c.field-meta.xml
<CustomField>
    <fullName>Percent_to_Decimal__c</fullName>
    <formula>1-( SBQQ__PartnerDiscount__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Percent to Decimal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>