objects/SBQQ__QuoteLine__c/fields/Perpetual__c.field-meta.xml
<CustomField>
    <fullName>Perpetual__c</fullName>
    <description>JR: 9/23/22 To be deleted.
Used for the purpose of approval process</description>
    <formula>OR( ISPICKVAL( Product_Type__c, &quot;Perpetual&quot;) ,   ISPICKVAL( License_Type__c , &quot;Perpetual&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>If Product Type OR License Type = Perpetual</inlineHelpText>
    <label>DEPRECATED - Perpetual</label>
    <type>Checkbox</type>
</CustomField>