objects/SBQQ__QuoteLine__c/fields/PremiumProductDiscounted__c.field-meta.xml
<CustomField>
    <fullName>PremiumProductDiscounted__c</fullName>
    <description>JR: 9/23/22 To be deleted.</description>
    <formula>AND(PremiumSupport__c =True ,SBQQ__Discount__c &gt;0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Identifies if the premium support was discounted</inlineHelpText>
    <label>DEPRECATED - Premium Product Discounted</label>
    <type>Checkbox</type>
</CustomField>