objects/SBQQ__QuoteLine__c/fields/PremiumSupport__c.field-meta.xml
<CustomField>
    <fullName>PremiumSupport__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Copy from Product</inlineHelpText>
    <label>Premium Support</label>
    <type>Checkbox</type>
</CustomField>