objects/SBQQ__QuoteLine__c/fields/Priced_with_Rounding_Turned_Off__c.field-meta.xml
<CustomField>
    <fullName>Priced_with_Rounding_Turned_Off__c</fullName>
    <formula>IF(LEN(TEXT(ABS(SBQQ__NetPrice__c - (FLOOR(SBQQ__NetPrice__c))))) &gt; 3, TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>If this field returns True, then rounding was turned off when the price for this line was calculated</inlineHelpText>
    <label>Priced with Rounding Turned Off</label>
    <type>Checkbox</type>
</CustomField>