objects/SBQQ__QuoteLine__c/fields/Prod_Computed_Term__c.field-meta.xml
<CustomField>
    <fullName>Prod_Computed_Term__c</fullName>
    <description>Computed Term for Product Line - NARR computation</description>
    <formula>(IF(ISBLANK(Prod_Max_End_Date__c),SBQQ__SubscriptionTerm__c,(YEAR(Prod_Max_End_Date__c ) - YEAR( Prod_Min_Start_Date__c))*12 - MONTH(Prod_Min_Start_Date__c) +
MONTH(Prod_Max_End_Date__c ) +
((DAY(Prod_Max_End_Date__c ) - DAY(Prod_Min_Start_Date__c) + 1) /
CASE(MONTH(Prod_Max_End_Date__c ),
4,30,
6,30,
9,30,
11,30,
2, IF(OR( MOD( YEAR(Prod_Max_End_Date__c ), 400 ) = 0, AND( MOD( YEAR(Prod_Max_End_Date__c ), 4 ) = 0, MOD(
YEAR( Prod_Max_End_Date__c ), 100 ) != 0 ) ),29,28),
31))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Computed Term for Product Line - NARR computation</inlineHelpText>
    <label>Prod Computed Term</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>