objects/SBQQ__QuoteLine__c/fields/Prod_Max_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Prod_Max_End_Date__c</fullName>
    <label>Prod Max End Date</label>
    <type>Date</type>
</CustomField>