objects/SBQQ__QuoteLine__c/fields/Prod_Min_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Prod_Min_Start_Date__c</fullName>
    <label>Prod Min Start Date</label>
    <type>Date</type>
</CustomField>