objects/SBQQ__QuoteLine__c/fields/Product_Code__c.field-meta.xml
<CustomField>
    <fullName>Product_Code__c</fullName>
    <description>Use to aggregate products to Quote.  Standard SBQQ__Product_Code__c is a formula and cannot be used in Rollup Summary field.</description>
    <label>Product Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>