objects/SBQQ__QuoteLine__c/fields/Product_Family_Core__c.field-meta.xml
<CustomField>
    <fullName>Product_Family_Core__c</fullName>
    <description>Use to Aggregate Products where Include In Seats Purchased is true and Transaction Type is NOT Renewal.  This field is used in a Price Rule and Summary Variable.</description>
    <formula>IF(
AND(
!ISPICKVAL(Promotion__c, &apos;Burst&apos;) ,
Product_Promotion_Name__c &lt;&gt; &apos;Burst&apos;,
!ISPICKVAL(Promotion__c, &apos;FOC&apos;) ,
Product_Promotion_Name__c &lt;&gt; &apos;FOC&apos;,
NOT( ISPICKVAL(Transaction_Type__c, &apos;Renewal&apos;)),
Exclude_from_Seats_Roll_up__c == False,
IncludeInSeatsPurchased__c),True, False
)</formula>
    <label>Product Family Core</label>
    <type>Checkbox</type>
</CustomField>