objects/SBQQ__QuoteLine__c/fields/Product_Group__c.field-meta.xml
<CustomField>
    <fullName>Product_Group__c</fullName>
    <description>Used in Price Rule.  Twin Field from Product.</description>
    <label>Partner Discount Product Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Product_Group</valueSetName>
    </valueSet>
</CustomField>