objects/SBQQ__QuoteLine__c/fields/Product_Group_Discount__c.field-meta.xml
<CustomField>
    <fullName>Product_Group_Discount__c</fullName>
    <description>Sum of all discount by Product Group.</description>
    <label>Product Group Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>