objects/SBQQ__QuoteLine__c/fields/Product_Include_in_ARV__c.field-meta.xml
<CustomField>
    <fullName>Product_Include_in_ARV__c</fullName>
    <description>Product Include in ARV info

06/29.2023 - Changed the label. ARV is a deprecated financial model</description>
    <formula>SBQQ__Product__r.TRAC_IncludeInARV__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DEPRECATED - Product Include in ARV</label>
    <type>Checkbox</type>
</CustomField>